# pam

./: .env  Cargo.toml  README.md  docker-compose-mysql.yml  docker-compose-postgres.yml  docker-compose.yml  docker_up  init_db.sql  init_db_postgres.sql  kill_all  table.html
client/: index.html  package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx  data.js  index.js  main.jsx
client/src/components/: AvailabilityDialog.js  AvailabilityDialog.jsx  AvailabilityPanel.jsx  ClippedDrawer.jsx  Comments.jsx  FeaturePanel.jsx  Loading.jsx  MenuAppBar.js  Panel.jsx  PanelDrawer.jsx  ProductPanel.jsx  TableFallback.js  TableFallback.jsx
client/src/pages/: Home.js  (+11 more)
examples/queries/: products
init_db/: package.json
init_db/src/: availability.js  cell.js  compliance.js  graphql.js  index.js  jurisdiction.js  lifecycle.js
loki/: docker-compose.yaml
o11y/: README.md  docker-compose.yaml  loki.config.yaml  loki_config.yaml
server/: Cargo.toml
server/src/: database.rs  lib.rs  main.rs  o11y.rs
server/src/handlers/: api_handlers.rs  graph_handlers.rs  mod.rs  static_handlers.rs
server/src/schema/: availability.rs  category.rs  cell.rs  comment.rs  compliance.rs  feature.rs  init.rs  jurisdiction.rs  lifecycle.rs  matrix.rs  mod.rs  product.rs  root.rs
src/: database.rs  handlers.rs  main.rs
src/handlers/: api_handlers.rs
src/schema/: availability.rs  category.rs  cell.rs  compliance.rs  feature.rs  jurisdiction.rs  lifecycle_stage.rs  mod.rs  product.rs  root.rs  status_type.rs
static/: asset-manifest.json  index.html  styles.css
(+20 files in other folders)
