[package]
name = "pam_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
actix-web-lab = "0.20.2"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
juniper = { version = "0.16.1", features = ["anyhow", "chrono"] }
log = "0.4.22"
mysql = { version = "25.0.1", features = ["chrono"] }
r2d2 = "0.8.10"
r2d2_mysql = "25.0.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v1", "v4", "serde"] }
