[package]
name = "pam_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.8.0"
actix-web-lab = "0.20.2"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
either = "1.13.0"
juniper = { version = "0.16.1", features = ["anyhow", "chrono"] }
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sqlx = { version = "0.8.0", features = ["postgres", "uuid", "chrono","runtime-tokio"] }
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v1", "v4", "serde"] }
